# rl-finance

./: .gitignore  .gitmodules  BUILD.sh  CMakeLists.txt
alp/: Manifest.toml  Project.toml
config/: ddpg.yml  ddpg_alpha.yml  ddpg_as_alpha.yml  ddpg_beta.yml  ddpg_gr_alpha.yml  ddpg_ou_alpha.yml  dqn.yml  dqn_alpha.yml  dqn_as_alpha.yml  dqn_beta.yml  dqn_gamma.yml  dqn_gr_alpha.yml  dqn_ou_alpha.yml  dqn_series_alpha.yml  dqn_series_beta.yml  dqn_series_gamma.yml  ppo_alpha.yml  ppo_as_alpha.yml  ppo_gr_alpha.yml  ppo_ou_alpha.yml  stable_1.yml  td3_alpha.yml  td3_as_alpha.yml  td3_beta.yml  td3_gamma.yml  td3_gr_alpha.yml  td3_ou_alpha.yml  td3_test.yml  test.yml
config/_old/: DDQN_zero.yml  ddpg_beta.yml  dqn.yml  dqn_beta.yml  dqn_delta.yml  dqn_series_alpha.yml  dqn_series_beta.yml  dqn_test.yml  stable_2.yml  td3_beta.yml  td3_test.yml
src/: BaseTypes.jl  DDPG.jl  DQN.jl  Env.ipynb  Env.jl  TD3.jl  ddpg.jl  ddqn.jl  ddqn_series.jl  ppo_test.jl  td3.jl
src/agents/: AS.jl  DDPG.jl  DQN.jl  Grid.jl  MRbase.jl  PPO.jl  TD3.jl
src/launch/: ddpg.jl  ddqn.jl  ddqn_series.jl  launch_all.jl  launch_any.jl  td3.jl
src/tools/: BaseTypes.jl  Env.jl  OUCalibr.jl
